<resources>
    <string name="app_name">vopio</string>

    <string name="old_sessions_header">Previous Sessions</string>
    <string name="delete_sessions">Delete all</string>

    <string name="join_session">Join session</string>
    <string name="scan_new_qr">Join new session</string>
    <string name="end_session">End session</string>
    <string name="session_status">Listening</string>
    <string name="session_id">Session Code</string>

    <string name="tab_instructor">Instructor</string>
    <string name="tab_student">Student</string>
    <string name="tab_lib">Library</string>

    <string name="got_it">Got it!</string>
    <string name="ask_prof">Ask instructor</string>

    <string name="active_students">Active Students</string>
    <string name="saved_words">Saved Words</string>

    <string name="leave_session">Leave session</string>
    <string name="send_feedback">Notify user about pronunciation</string>
    <string name="scan_instruction">Scan code from host phone\n to join session.</string>
    <string name="create_session">New Session</string>
    <string name="sign_in">Login</string>
    <string name="logout">Logout</string>
    <string name="sample_caption">This is one interestingly long word.</string>
    <string name="permission_message">This app needs to capture audio to recognize your speech.</string>
    <string name="mic_on">Mic ON</string>
    <string name="mic_off">Mic OFF</string>
    <string name="share_code">Share QR code</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>

    <string name="library_header">Saved Words (by %1$s)</string>

    <string name="onboard_one_title">Interactive captions</string>
    <string name="onboard_one">For curious students\nwho prefer to learn quietly</string>

    <string name="onboard_two_title">STEM simplified</string>
    <string name="onboard_two">A simple way to expand\nvocabulary during class</string>

    <string name="onboard_three_title">College success</string>
    <string name="onboard_three">Less learning barriers.\nHigher comprehension</string>

    <!--
This string is used for square devices and overridden by hello_world in
values-round/strings.xml for round devices.
-->
    <string name="hello_world">Hello Square World!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="invite_menu_label">Invite</string>
    <string name="schedule">Schedule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_header_label">navigation header</string>
    <string name="about_app">About</string>
    <string name="next_slide">Next</string>
    <string name="onboarding_descriptor">Onboarding</string>


</resources>
