<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback_black_24px"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_outline_black_24px"/>
        <item
            android:id="@+id/nav_invite"
            android:title="@string/invite_menu_label"
            android:icon="@drawable/ic_share_black_48px"/>
    </group>

</menu>
