<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".host_views.SessionHostActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_300"
            app:menu="@menu/host_toolbar_menu"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/sessionCodeView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sub_header_height"
        android:background="@color/purple_light"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <Button
            android:id="@+id/sessionCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_id"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/holo_orange_light"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/session_status"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/hostCaptionRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sessionCodeView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hostCaptionRecyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/activeUsersTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusView"
        app:spanCount="1"
        tools:itemCount="1">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/activeUsersTextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/separator_bar_height"
        android:background="@color/purple_light"
        android:gravity="center"
        android:text="@string/active_students"
        android:textColor="@android:color/black"
        android:textSize="@dimen/separator_bar_text_size"
        app:layout_constraintBottom_toTopOf="@+id/questionRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hostCaptionRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questionRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeUsersTextView"
        app:spanCount="1"
        tools:itemCount="1"/>


</androidx.constraintlayout.widget.ConstraintLayout>